--- a/Sentinel/ScheduleDetailView.xib
+++ b/Sentinel/ScheduleDetailView.xib
@@ -41,7 +41,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 20}, {128, 21}}</string>
 						<reference key="NSSuperview" ref="133500398"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="607830611"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -73,7 +72,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{175, 20}, {125, 21}}</string>
 						<reference key="NSSuperview" ref="133500398"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="38118987"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -85,7 +83,6 @@
 						<reference key="IBUITextColor" ref="929041694"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<int key="IBUITextAlignment">2</int>
 						<reference key="IBUIFontDescription" ref="439352809"/>
 						<reference key="IBUIFont" ref="842932715"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
@@ -95,7 +92,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{149, 20}, {22, 21}}</string>
 						<reference key="NSSuperview" ref="133500398"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="245396134"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -116,7 +112,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{97, 67}, {127, 21}}</string>
 						<reference key="NSSuperview" ref="133500398"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="441637011"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -138,7 +133,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{110, 115}, {101, 21}}</string>
 						<reference key="NSSuperview" ref="133500398"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -156,7 +150,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 156}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="761645838"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -473,13 +466,18 @@
 						<reference key="parent" ref="133500398"/>
 					</object>
 					<object class="IBObjectRecord">
+						<int key="objectID">32</int>
+						<reference key="object" ref="441637011"/>
+						<reference key="parent" ref="133500398"/>
+					</object>
+					<object class="IBObjectRecord">
 						<int key="objectID">22</int>
 						<reference key="object" ref="714307738"/>
 						<reference key="parent" ref="38118987"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">25</int>
-						<reference key="object" ref="458541988"/>
+						<int key="objectID">34</int>
+						<reference key="object" ref="235352798"/>
 						<reference key="parent" ref="133500398"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -488,23 +486,18 @@
 						<reference key="parent" ref="133500398"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">31</int>
-						<reference key="object" ref="83557978"/>
-						<reference key="parent" ref="133500398"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">32</int>
-						<reference key="object" ref="441637011"/>
-						<reference key="parent" ref="133500398"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">33</int>
 						<reference key="object" ref="273308299"/>
 						<reference key="parent" ref="133500398"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">34</int>
-						<reference key="object" ref="235352798"/>
+						<int key="objectID">31</int>
+						<reference key="object" ref="83557978"/>
+						<reference key="parent" ref="133500398"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">25</int>
+						<reference key="object" ref="458541988"/>
 						<reference key="parent" ref="133500398"/>
 					</object>
 				</array>
@@ -556,57 +549,9 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">39</int>
+			<int key="maxID">55</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">NSLayoutConstraint</string>
-					<string key="superclassName">NSObject</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/NSLayoutConstraint.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">ScheduleDetailView</string>
-					<string key="superclassName">UIView</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="awayTeamAthletics">UILabel</string>
-						<string key="awayTeamLabel">UILabel</string>
-						<string key="dateTimeLabel">UILabel</string>
-						<string key="homeTeamLabel">UILabel</string>
-						<string key="locationLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="awayTeamAthletics">
-							<string key="name">awayTeamAthletics</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="awayTeamLabel">
-							<string key="name">awayTeamLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="dateTimeLabel">
-							<string key="name">dateTimeLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="homeTeamLabel">
-							<string key="name">homeTeamLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="locationLabel">
-							<string key="name">locationLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ScheduleDetailView.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
