Fixed new google maps. iOS 6 graphic changes.

--- a/Sentinel/en.lproj/MainStoryboard.storyboard
+++ b/Sentinel/en.lproj/MainStoryboard.storyboard
@@ -122,14 +122,12 @@
                         <outlet property="athleticsArrow" destination="Cbg-b4-ShW" id="dvH-q7-6WG"/>
                         <outlet property="athleticsButton" destination="REa-nc-rJ8" id="T1P-cy-iL9"/>
                         <outlet property="athleticsLabel" destination="Sq9-Tc-ixd" id="Zzc-QK-5XR"/>
-                        <outlet property="blackWoodBackground" destination="pKU-th-Zlx" id="KVV-V1-6US"/>
                         <outlet property="dateLabel" destination="Ho4-Rt-iW0" id="UgS-nK-qu3"/>
                         <outlet property="dayLabel" destination="TpI-bY-RWa" id="QSH-hh-40z"/>
                         <outlet property="infoArrow" destination="4Oh-VZ-uYS" id="vCg-PY-AfF"/>
                         <outlet property="infoButton" destination="vwP-mK-VzY" id="zuf-NE-aH2"/>
                         <outlet property="infoLabel" destination="mi7-oy-tBK" id="yvq-tx-gyD"/>
                         <outlet property="rotationLabel" destination="GT6-3R-RtS" id="LAn-tU-0l8"/>
-                        <outlet property="spartanLogo" destination="vn7-E5-jXi" id="iTw-Fk-HHB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1yO-Bl-8K9" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -253,10 +251,6 @@
                                 <rect key="frame" x="0.0" y="64" width="320" height="130"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iPhone5 Black Wood Background3.png" id="HIv-4X-0EM">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <gestureRecognizers/>
@@ -268,6 +262,7 @@
                     <navigationItem key="navigationItem" id="x2l-Gw-3qv"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="sentinelImage" destination="yF6-jN-CcU" id="RPw-Of-PwX"/>
                         <outlet property="webView" destination="UaM-J0-mXF" id="ana-nF-8HO"/>
                     </connections>
                 </viewController>
@@ -737,7 +732,6 @@
         <image name="Sentinel Athletics.png" width="500" height="90"/>
         <image name="Welcome-1.png" width="380" height="90"/>
         <image name="bird_32_black.png" width="32" height="32"/>
-        <image name="iPhone5 Black Wood Background3.png" width="640" height="1136"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
