--- a/Sentinel/ScheduleCustomCell.xib
+++ b/Sentinel/ScheduleCustomCell.xib
@@ -21,7 +21,7 @@
                             <constraint firstAttribute="height" constant="21" id="183"/>
                             <constraint firstAttribute="width" constant="199" id="214"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="Marion-Regular" family="Marion" pointSize="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </label>
@@ -32,7 +32,7 @@
                             <constraint firstAttribute="width" constant="111" id="221"/>
                             <constraint firstAttribute="height" constant="21" id="239"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="Marion-Regular" family="Marion" pointSize="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </label>
@@ -43,7 +43,7 @@
                             <constraint firstAttribute="height" constant="21" id="232"/>
                             <constraint firstAttribute="width" constant="89" id="235"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="Marion-Regular" family="Marion" pointSize="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </label>
