--- a/Sentinel/ScheduleCustomCell.xib
+++ b/Sentinel/ScheduleCustomCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment version="1792" defaultVersion="1280" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
@@ -10,7 +10,7 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" rowHeight="50" id="2" customClass="ScheduleCustomCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2" id="EJd-Jt-eZi">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2" id="3gU-eF-3Lg">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
@@ -50,12 +50,12 @@
                 </subviews>
             </tableViewCellContentView>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="226" secondAttribute="bottom" constant="2" id="6vL-lQ-czp"/>
-                <constraint firstAttribute="trailing" secondItem="226" secondAttribute="trailing" constant="20" id="8IT-Dg-pZd"/>
-                <constraint firstItem="226" firstAttribute="leading" secondItem="3" secondAttribute="trailing" constant="8" symbolic="YES" id="9up-hR-3gx"/>
-                <constraint firstItem="22" firstAttribute="leading" secondItem="3" secondAttribute="trailing" constant="8" symbolic="YES" id="I03-2v-Sil"/>
-                <constraint firstItem="22" firstAttribute="top" secondItem="2" secondAttribute="top" constant="8" id="V4Z-in-uhs"/>
-                <constraint firstItem="3" firstAttribute="top" secondItem="2" secondAttribute="top" constant="14" id="oPe-0U-r2Z"/>
+                <constraint firstItem="22" firstAttribute="top" secondItem="2" secondAttribute="top" constant="8" id="59u-ib-V60"/>
+                <constraint firstAttribute="bottom" secondItem="226" secondAttribute="bottom" constant="2" id="6c9-Jd-CUi"/>
+                <constraint firstItem="226" firstAttribute="leading" secondItem="3" secondAttribute="trailing" constant="8" symbolic="YES" id="DZa-B8-nmT"/>
+                <constraint firstItem="3" firstAttribute="top" secondItem="2" secondAttribute="top" constant="14" id="VEt-Iv-heK"/>
+                <constraint firstAttribute="trailing" secondItem="226" secondAttribute="trailing" constant="20" id="eKh-cL-Osv"/>
+                <constraint firstItem="22" firstAttribute="leading" secondItem="3" secondAttribute="trailing" constant="8" symbolic="YES" id="x7T-lx-MbI"/>
             </constraints>
             <connections>
                 <outlet property="gameTime" destination="226" id="238"/>
