--- a/Sentinel/en.lproj/MainStoryboard.storyboard
+++ b/Sentinel/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="wYw-Cs-v7p">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="wYw-Cs-v7p">
     <dependencies>
         <deployment defaultVersion="1280" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
@@ -272,9 +272,8 @@
                         </connections>
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" image="53-house.png" id="pQo-Ge-rJz"/>
-                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackOpaque"/>
-                    <nil key="simulatedTopBarMetrics"/>
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <navigationItem key="navigationItem" id="x2l-Gw-3qv"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="sentinelImage" destination="yF6-jN-CcU" id="RPw-Of-PwX"/>
                         <outlet property="webView" destination="UaM-J0-mXF" id="ana-nF-8HO"/>
@@ -516,7 +515,7 @@
         <scene sceneID="KO2-kS-fE1">
             <objects>
                 <navigationController definesPresentationContext="YES" id="vZ8-bz-8RI" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Announcements" image="66-microphone.png" id="oPa-Vs-D42"/>
+                    <tabBarItem key="tabBarItem" title="eBulletins" image="66-microphone.png" id="oPa-Vs-D42"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" prompted="NO"/>
                     <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" barStyle="black" id="jeK-wR-HX5">
                         <rect key="frame" x="0.0" y="-44" width="0.0" height="44"/>
